<resources>
    <string name="app_name">FragmentLifeCycle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="launch_detail_fragment">Launch Detail Fragment</string>
    <string name="willing_to_relocate">Willing to relocate?</string>
    <string name="send">Send</string>
    <string name="enter_your_salary">Enter your salary</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_second_name">Enter your second name</string>
    <string name="enter_your_id_number">Enter your ID number</string>
</resources>